Signup and login: ready (security issue still exists) Internationalisation: ready Basic pages: yes

--- a/src/main/resources/static/css/base/main_panel.css
+++ b/src/main/resources/static/css/base/main_panel.css
@@ -1,7 +1,5 @@
 .main-panel {
-    padding-left: 2%;
-    padding-right: 2%;
-    margin-bottom: 3%;
+    padding: 1% 2% 2%;
     border-radius: 5px;
 }
 
@@ -17,4 +15,25 @@
 
 @media (min-width: 740px) {
 
+}
+
+.link {
+    font-size: medium;
+    cursor: pointer;
+}
+
+.link-light {
+    color: #6e3c97;
+}
+
+.link-light:hover {
+    color: rgba(63, 29, 90, 0.76);
+}
+
+.link-dark {
+    color: #c294e8;
+}
+
+.link-dark:hover {
+    color: #a36dd0;
 }
