--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -33,13 +33,13 @@
             </div>
             <ul class="nav navbar-nav">
                 <li>
-                    <a th:text="#{navbar.authors}" href="/">Authors</a>
+                    <a th:text="#{navbar.works}" href="/works">Authors</a>
                 </li>
                 <li>
-                    <a th:text="#{navbar.fanfics}" href="/">Authors</a>
+                    <a th:text="#{navbar.authors}" href="/authors">Authors</a>
                 </li>
                 <li>
-                    <a th:text="#{navbar.rules}" href="/">Authors</a>
+                    <a th:text="#{navbar.rules}" href="/rules">Authors</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -72,11 +72,11 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/" th:text="#{dropdown.news}">News</a></li>
+                            <li><a href="/home/news" th:text="#{dropdown.news}">News</a></li>
                             <li class="divider"></li>
-                            <li><a href="/" th:text="#{dropdown.profile}">Profile</a></li>
-                            <li><a href="/" th:text="#{dropdown.works}">Works</a></li>
-                            <li><a href="/" th:text="#{dropdown.likes}">Likes</a></li>
+                            <li><a href="/home/profile" th:text="#{dropdown.profile}">Profile</a></li>
+                            <li><a href="/home/works" th:text="#{dropdown.works}">Works</a></li>
+                            <li><a href="/home/saved" th:text="#{dropdown.saved}">Likes</a></li>
                             <li class="divider"></li>
                             <li><a href="/logout" th:text="#{dropdown.logout}">Logout</a></li>
                         </ul>
@@ -90,7 +90,7 @@
     <!-- ---------- -->
     <div class="container">
         <div class="main-panel main-panel-light">
-            <div class="d-flex justify-content-center" style="padding-top: 10px; padding-bottom: 10px">
+            <div class="d-flex justify-content-center">
                 <div class="card" style="width: available; justify-content: center">
                     <div class="card-body">
                         <a style="color: green"><td th:text="${message}">msg</td></a>
@@ -100,18 +100,21 @@
                         <form name="signup" action="/auth/signup" method="post">
 
                             <div class="form-group">
-                                <label for="username" th:text="#{signup.email}">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" required>
+                                <label for="email" th:text="#{signup.email}">Email</label>
+                                <input type="email" class="form-control" id="email" name="email"
+                                       maxlength="255" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="username" th:text="#{signup.username}">Username</label>
-                                <input type="text" class="form-control" id="username" name="username" required>
+                                <input type="text" class="form-control" id="username" name="username"
+                                       maxlength="255" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="password" th:text="#{signup.password}">Password</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
+                                <input type="password" class="form-control" id="password" name="password"
+                                       maxlength="100" required>
                             </div>
                             <div class="form-group">
                                 <label for="password-confirm" th:text="#{signup.confirm_password}">Password rep</label>
@@ -135,7 +138,14 @@
 
                             <div class="form-group">
                                 <label for="description" th:text="#{signup.description}">Username</label>
-                                <input type="text" class="form-control" id="description" name="description" maxlength="500">
+                                <!--<input type="text" class="form-control" id="description" name="description"
+                                       th:rows="4" th:cols="40" maxlength="500">-->
+                                <textarea class="form-control" id="description" name="description"
+                                          rows="3" cols="20" maxlength="500"
+                                          onkeyup="textCounter(this, 'descriptionCounter', 500)"></textarea>
+                                <label for="descriptionCounter" th:text="#{signup.characters_left}"
+                                       style="font-weight: normal">Left</label>
+                                <input disabled  maxlength="3" size="3" value="500" id="descriptionCounter">
                             </div>
 
                             <button type="submit" class="btn btn-primary" th:text="#{signup.button}">S</button>
@@ -149,10 +159,22 @@
 </body>
 
 <script>
+    function textCounter(field, field2, maxlimit) {
+        var countfield = document.getElementById(field2);
+        if ( field.value.length > maxlimit ) {
+            field.value = field.value.substring( 0, maxlimit);
+            return false;
+        } else {
+            countfield.value = maxlimit - field.value.length;
+        }
+    }
+</script>
+
+<script>
     var password = document.getElementById("password");
     var confirm_password = document.getElementById("password-confirm");
 
-    function validatePassword(){
+    function validatePassword() {
         if(password.value !== confirm_password.value) {
             var passMessage = document.getElementById("passMessage").value;
             confirm_password.setCustomValidity(passMessage);
