--- a/src/main/resources/templates/home/add_work.html
+++ b/src/main/resources/templates/home/add_work.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+>
 <head>
-    <title th:text="#{error.title}">Title</title>
+    <title th:text="#{navbar.signup}">Title</title>
+
     <!-- For bootstrap -->
-    <!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <!-- Local css -->
-    <link rel="stylesheet" type="text/css" href="css/base/background.css">
-    <link rel="stylesheet" type="text/css" href="css/base/main_panel.css">
-    <link rel="stylesheet" type="text/css" href="css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/background.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/auth/sighup.css">
 
     <meta charset="UTF-8">
 </head>
@@ -88,19 +88,82 @@
     <!-- ---------- -->
     <div class="container">
         <div class="main-panel main-panel-light">
-            <div class="container" style="padding-top: 10px; padding-bottom: 10px">
-                <h3 th:text="#{error.head}">Head</h3>
-                <td th:if="${error == null}">
-                    <p th:text="#{error.body}">Body</p>
-                </td>
-                <td th:unless="${error == null}">
-                    <p th:text="${error}">Body</p>
-                </td>
+            <div class="d-flex justify-content-center">
+                <div class="card" style="width: available; justify-content: center">
+                    <div class="card-body">
+                        <a style="color: green"><td th:text="${message}">msg</td></a>
+                        <a style="color: red"><td th:text="${error}">err</td></a>
+                        <p/>
+
+                        <form name="add_work" action="/home/works/add_work" method="post">
+
+                            <div class="form-group">
+                                <label for="name" th:text="#{home.add_fic.name}">name</label>
+                                <input type="email" class="form-control" id="name" name="name"
+                                       maxlength="255" required>
+                            </div>
+
+                            <fieldset class="form-group">
+                                <div class="row">
+                                    <legend class="col-form-label col-sm-2 pt-0" th:text="#{home.add_fic.type}">Radios</legend>
+                                    <div class="col-sm-10">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
+                                                   value="original" checked>
+                                            <label class="form-check-label" for="gridRadios1" th:text="#{work.category.types.original}">
+                                                First radio
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
+                                                   value="fandom">
+                                            <label class="form-check-label" for="gridRadios2" th:text="#{home.add_fic.type.fandom}">
+                                                Second radio
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+
+                            <div class="form-group">
+                                <label for="username" th:text="#{signup.username}">Username</label>
+                                <input type="text" class="form-control" id="username" name="username"
+                                       maxlength="255" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="description" th:text="#{signup.description}">Username</label>
+                                <!--<input type="text" class="form-control" id="description" name="description"
+                                       th:rows="4" th:cols="40" maxlength="500">-->
+                                <textarea class="form-control" id="description" name="description"
+                                          rows="3" cols="20" maxlength="500"
+                                          onkeyup="textCounter(this, 'descriptionCounter', 500)"></textarea>
+                                <label for="descriptionCounter" th:text="#{signup.characters_left}"
+                                       style="font-weight: normal">Left</label>
+                                <input disabled  maxlength="3" size="3" value="500" id="descriptionCounter">
+                            </div>
+
+                            <button type="submit" class="btn btn-primary" th:text="#{signup.button}">S</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
+
+<script>
+    function textCounter(field, field2, maxlimit) {
+        var countfield = document.getElementById(field2);
+        if ( field.value.length > maxlimit ) {
+            field.value = field.value.substring( 0, maxlimit);
+            return false;
+        } else {
+            countfield.value = maxlimit - field.value.length;
+        }
+    }
+</script>
 
 <!-- For bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
