--- a/src/main/resources/templates/works.html
+++ b/src/main/resources/templates/works.html
@@ -3,7 +3,7 @@
       xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title th:text="#{error.title}">Title</title>
+    <title th:text="#{navbar.works}">Title</title>
     <!-- For bootstrap -->
     <!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,14 +13,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- Local css -->
-    <link rel="stylesheet" type="text/css" href="css/base/background.css">
-    <link rel="stylesheet" type="text/css" href="css/base/main_panel.css">
-    <link rel="stylesheet" type="text/css" href="css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/background.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
+    <link rel="stylesheet" type="text/css" href="/css/base/nav.css">
+    <!-- Script to load navbar -->
+    <!--<script src="js/csi.js"></script>-->
 
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="bg">
+    <!--<div data-include="/components/navbar.html"></div>-->
     <!-- ---------- -->
     <!-- Navbar -->
     <!-- ---------- -->
@@ -64,9 +67,11 @@
                 <th:block th:unless="${#authentication.getName().equals('anonymousUser')}">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"
-                           style="cursor: pointer"
-                           th:text="${#authentication.principal.username}">
-                            Username
+                           th:text="${#authentication.principal.username}"
+                           style="cursor: pointer">
+                            <!--<img th:src="${#authentication.principal.userInfo.avatarUrl}"
+                                 class="img-circle img-responsive"
+                                 th:alt="${#authentication.principal.username}">-->
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -88,14 +93,41 @@
     <!-- ---------- -->
     <div class="container">
         <div class="main-panel main-panel-light">
-            <div class="container" style="padding-top: 10px; padding-bottom: 10px">
-                <h3 th:text="#{error.head}">Head</h3>
-                <td th:if="${error == null}">
-                    <p th:text="#{error.body}">Body</p>
-                </td>
-                <td th:unless="${error == null}">
-                    <p th:text="${error}">Body</p>
-                </td>
+            <div class="container-fluid" style="padding-top: 10px">
+                <b th:if="${error}">
+                    <a style="color: red"><td th:text="#{work.fandom_type.undefined}">err</td></a>
+                </b>
+                <h2 th:text="#{work.category.types}">Cat</h2>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="link link-light"><a href="/works/anime_and_manga" th:text="#{work.category.types.anime_and_manga}">С</a></p>
+                        <p class="link link-light"><a href="/works/books" th:text="#{work.category.types.books}">С</a></p>
+                        <p class="link link-light"><a href="/works/cartoons_and_comic_books" th:text="#{work.category.types.cartoons_and_comic_books}">С</a></p>
+                        <p class="link link-light"><a href="/works/games" th:text="#{work.category.types.games}">С</a></p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="link link-light"><a href="/works/theater_and_musicals" th:text="#{work.category.types.theater_and_musicals}">С</a></p>
+                        <p class="link link-light"><a href="/works/real_people" th:text="#{work.category.types.real_people}">С</a></p>
+                        <p class="link link-light"><a href="/works/original" th:text="#{work.category.types.original}">С</a></p>
+                        <p class="link link-light"><a href="/works/other" th:text="#{work.category.types.other}">С</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="container" style="padding-bottom: 10px">
+                <h3 th:text="#{work.tags}">Tag</h3>
+                <th:block th:if="${tags != null}">
+                    <th:block th:if="${tags.size() > 0}">
+                        <ul>
+                            <li th:each="tag : ${tags}" th:text="${tag.name} : ${tag.workCount}">user name</li>
+                        </ul>
+                        <p class="link link-light" th:if="${tagsTotalAmount > tags.size()}">
+                            <a href="#" th:text="#{list.tag.all}">Ссылка на список всех тегов</a>
+                        </p>
+                    </th:block>
+                </th:block>
+                <th:block th:if="${tags == null || tags.size() <= 0}">
+                    <p th:text="#{list.tag.empty}">No tags</p>
+                </th:block>
             </div>
         </div>
     </div>
